--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pretty-quick": "~4.2.2",
     "lint-staged": "~16.1.4",
     "typescript": "~5.9.2",
+    "@iconify/tailwind4": "~1.0.6",
     "@tailwindcss/postcss": "~4.1.11",
     "tailwindcss": "~4.1.11"
   },
