--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,8 +9,8 @@
   "module": "esm/index.js",
   "license": "ISC",
   "scripts": {
-    "build": "carefrees-rslib build --config=./rslib.config.ts",
-    "watch": "carefrees-rslib build --watch --config=./rslib.config.ts"
+    "build": "carefrees-rslib build --esm",
+    "watch": "carefrees-rslib build --watch --esm"
   },
   "publishConfig": {
     "access": "public"
