--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,4 @@
 {
   "version": "0.0.0",
-  "packages": [
-    "packages/*",
-    "examples/*"
-  ]
+  "packages": ["packages/*", "examples/*", "docs"]
 }
