--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -26,9 +26,9 @@
   },
   "devDependencies": {
     "@types/react": "~18.2.21",
-    "react": "~18.3.1",
-    "@tarojs/components": "4.1.6",
-    "@tarojs/taro": "4.1.6",
-    "@tarojs/react": "4.1.6"
+    "react": "^18.0.0",
+    "@tarojs/components": "4.1.7",
+    "@tarojs/taro": "4.1.7",
+    "@tarojs/react": "4.1.7"
   }
 }
