--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,17 +16,17 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 20
+        node-version: 22
 
-    # - run: yarn install
-    # - run: yarn run build:all
-    # - run: yarn build:docs
+    - run: yarn install
+    - run: yarn run build:all
+    - run: yarn build:docs
 
-    # - name: Create Doc
-    #   uses: peaceiris/actions-gh-pages@v4
-    #   with:
-    #     github_token: ${{ secrets.GITHUB_TOKEN }}
-    #     # publish_dir: ./docs/doc_build
+    - name: Create Doc
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./docs/doc_build
 
     # - name: Create Tag
     #   id: create_tag
