--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "----": "============================ui=============================",
     "watch": "npm run-script watch --workspace @fairys/taro-tools-react",
     "build": "npm run-script build --workspace @fairys/taro-tools-react",
-    "docs:build": "npm run-script build --workspace docs",
+    "build:docs": "npm run-script build --workspace docs",
     "docs": "npm run-script dev --workspace docs",
     "build:all": "npm run build",
     "version": "lerna version --force-publish=* --no-changelog --no-git-tag-version --no-push",
