--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "prettier": "~2.7.0",
     "pretty-quick": "~4.2.2",
     "lint-staged": "~16.1.4",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "unocss": "~66.5.7",
+    "@unocss/postcss": "~66.5.7"
   },
   "lint-staged": {
     "*.{js,jsx,tsx,ts,less,md,json}": "prettier --write"
