--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "lint-staged": "~16.1.4",
     "typescript": "~5.9.2",
     "unocss": "~66.5.7",
-    "@unocss/postcss": "~66.5.7"
+    "@unocss/postcss": "~66.5.7",
+    "unocss-preset-weapp": "~66.0.2"
   },
   "lint-staged": {
     "*.{js,jsx,tsx,ts,less,md,json}": "prettier --write"
