--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "----": "============================ui=============================",
     "watch": "npm run-script watch --workspace @fairys/taro-tools-react",
     "build": "npm run-script build --workspace @fairys/taro-tools-react",
+    "-----": "============================plugins=============================",
+    "watch:plugins": "npm run-script watch --workspace @fairys/taro-tools-plugins",
+    "build:plugins": "npm run-script build --workspace @fairys/taro-tools-plugins",
+    "------": "============================docs=============================",
     "build:docs": "npm run-script build --workspace docs",
     "docs": "npm run-script dev --workspace docs",
-    "build:all": "npm run build",
+    "build:all": "npm run build:plugins && npm run build",
     "version": "lerna version --force-publish=* --no-changelog --no-git-tag-version --no-push",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\""
   },
