--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -24,6 +24,7 @@
     "valtio": "~2.1.5"
   },
   "devDependencies": {
+    "@nutui/nutui-react-taro": "^3.0.18",
     "react-dom": "^18.0.0",
     "@types/react": "~18.2.21",
     "react": "^18.0.0",
