--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "pretty-quick": "~4.2.2",
     "lint-staged": "~16.1.4",
     "typescript": "~5.9.2",
-    "unocss": "~66.5.7",
-    "@unocss/postcss": "~66.5.7",
-    "unocss-preset-weapp": "~66.0.2"
+    "unocss": "~66.5.9",
+    "@unocss/postcss": "~66.5.9",
+    "unocss-preset-weapp": "~66.0.2",
+    "@unocss/preset-icons": "~66.5.9",
+    "@iconify/json": "~2.2.409"
   },
   "lint-staged": {
     "*.{js,jsx,tsx,ts,less,md,json}": "prettier --write"
