--- a/package.json
+++ b/package.json
@@ -25,10 +25,7 @@
     "lint-staged": "~16.1.4",
     "typescript": "~5.9.2",
     "unocss": "~66.5.9",
-    "@unocss/postcss": "~66.5.9",
-    "unocss-preset-weapp": "~66.0.2",
-    "@unocss/preset-icons": "~66.5.9",
-    "@iconify/json": "~2.2.409"
+    "@unocss/postcss": "~66.5.9"
   },
   "lint-staged": {
     "*.{js,jsx,tsx,ts,less,md,json}": "prettier --write"
