--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "-----": "============================plugins=============================",
     "watch:plugins": "npm run-script watch --workspace @fairys/taro-tools-plugins",
     "build:plugins": "npm run-script build --workspace @fairys/taro-tools-plugins",
-    "------": "============================docs=============================",
+    "------": "============================form=============================",
+    "watch:form": "npm run-script watch --workspace @fairys/taro-tools-simple-form",
+    "build:form": "npm run-script build --workspace @fairys/taro-tools-simple-form",
+    "-------": "============================docs=============================",
     "build:docs": "npm run-script build --workspace docs",
     "docs": "npm run-script dev --workspace docs",
     "build:all": "npm run build:plugins && npm run build",
