--- a/packages/simple-form/package.json
+++ b/packages/simple-form/package.json
@@ -15,6 +15,11 @@
   "publishConfig": {
     "access": "public"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/autumn-fairy-tales/fairys-taro-react.git",
+    "directory": "packages/simple-form"
+  },
   "files": [
     "src",
     "esm"
