--- a/examples/base/package.json
+++ b/examples/base/package.json
@@ -1,6 +1,6 @@
 {
   "name": "base",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "description": "",
   "templateInfo": {
@@ -37,55 +37,55 @@
   ],
   "author": "",
   "dependencies": {
-    "@nutui/nutui-react-taro": "^3.0.18",
-    "@fairys/taro-tools-react": "^0.0.0",
-    "@fairys/taro-tools-simple-form": "^0.0.0",
     "@babel/runtime": "^7.24.4",
+    "@fairys/taro-tools-react": "^0.0.1",
+    "@fairys/taro-tools-simple-form": "^0.0.1",
+    "@nutui/nutui-react-taro": "^3.0.18",
     "@tarojs/components": "4.1.7",
     "@tarojs/helper": "4.1.7",
-    "@tarojs/plugin-platform-weapp": "4.1.7",
+    "@tarojs/plugin-framework-react": "4.1.7",
     "@tarojs/plugin-platform-alipay": "4.1.7",
-    "@tarojs/plugin-platform-tt": "4.1.7",
-    "@tarojs/plugin-platform-swan": "4.1.7",
-    "@tarojs/plugin-platform-jd": "4.1.7",
-    "@tarojs/plugin-platform-qq": "4.1.7",
     "@tarojs/plugin-platform-h5": "4.1.7",
     "@tarojs/plugin-platform-harmony-hybrid": "4.1.7",
+    "@tarojs/plugin-platform-jd": "4.1.7",
+    "@tarojs/plugin-platform-qq": "4.1.7",
+    "@tarojs/plugin-platform-swan": "4.1.7",
+    "@tarojs/plugin-platform-tt": "4.1.7",
+    "@tarojs/plugin-platform-weapp": "4.1.7",
+    "@tarojs/react": "4.1.7",
     "@tarojs/runtime": "4.1.7",
     "@tarojs/shared": "4.1.7",
     "@tarojs/taro": "4.1.7",
-    "@tarojs/plugin-framework-react": "4.1.7",
-    "@tarojs/react": "4.1.7",
-    "react-dom": "^18.0.0",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   },
   "devDependencies": {
-    "@tarojs/plugin-generator": "4.1.7",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "lint-staged": "^16.1.2",
-    "husky": "^9.1.7",
-    "stylelint-config-standard": "^38.0.0",
     "@babel/core": "^7.24.4",
     "@babel/plugin-transform-class-properties": "7.25.9",
-    "@tarojs/cli": "4.1.7",
-    "@tarojs/vite-runner": "4.1.7",
-    "babel-preset-taro": "4.1.7",
-    "eslint-config-taro": "4.1.7",
-    "eslint": "^8.57.0",
-    "stylelint": "^16.4.0",
-    "terser": "^5.30.4",
-    "vite": "^4.2.0",
     "@babel/preset-react": "^7.24.1",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@tarojs/cli": "4.1.7",
+    "@tarojs/plugin-generator": "4.1.7",
+    "@tarojs/vite-runner": "4.1.7",
+    "@types/minimatch": "^5",
     "@types/react": "~18.2.21",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "babel-preset-taro": "4.1.7",
+    "eslint": "^8.57.0",
+    "eslint-config-taro": "4.1.7",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
+    "postcss": "^8.4.38",
     "react-refresh": "^0.14.0",
     "sass": "^1.75.0",
+    "stylelint": "^16.4.0",
+    "stylelint-config-standard": "^38.0.0",
+    "terser": "^5.30.4",
     "typescript": "^5.4.5",
-    "postcss": "^8.4.38",
-    "@types/minimatch": "^5"
+    "vite": "^4.2.0"
   }
 }
