--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -3,7 +3,7 @@
   "author": "SunLxy <1011771396@qq.com>",
   "description": "框架组件库",
   "homepage": "https://github.com/autumn-fairy-tales/fairys-taro-react",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "main": "lib/index.js",
   "types": "esm/index.d.ts",
   "module": "esm/index.js",
@@ -30,11 +30,11 @@
   },
   "devDependencies": {
     "@nutui/nutui-react-taro": "^3.0.18",
-    "react-dom": "^18.0.0",
+    "@tarojs/components": "4.1.7",
+    "@tarojs/react": "4.1.7",
+    "@tarojs/taro": "4.1.7",
     "@types/react": "~18.2.21",
     "react": "^18.0.0",
-    "@tarojs/components": "4.1.7",
-    "@tarojs/taro": "4.1.7",
-    "@tarojs/react": "4.1.7"
+    "react-dom": "^18.0.0"
   }
 }
