--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -61,6 +61,7 @@ jobs:
           npm i @fairys/taro-tools-react@${{ steps.create_tag.outputs.version }}
           npm i @fairys/taro-tools-plugins@${{ steps.create_tag.outputs.version }}
           npm i @fairys/taro-tools-simple-form@${{ steps.create_tag.outputs.version }}
+          npm i @fairys/taro-tools-simple-form-ui@${{ steps.create_tag.outputs.version }}
           ```
           ${{ steps.changelog.outputs.compareurl }}
           ${{ steps.changelog.outputs.changelog }}
@@ -71,7 +72,7 @@ jobs:
     - name: Publish 🚀
       uses: SunLxy/npm-publish@main
       with:
-        # token: ${{ secrets.NPM_TOKEN }}
+        token: ${{ secrets.NPM_TOKEN }}
         workspaces: |
           core
           packages/*
