--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "-----": "============================plugins=============================",
     "watch:plugins": "npm run-script watch --workspace @fairys/taro-tools-plugins",
     "build:plugins": "npm run-script build --workspace @fairys/taro-tools-plugins",
-    "------": "============================form=============================",
+    "---------": "============================form=============================",
+    "watch:form:ui": "npm run-script watch --workspace @fairys/taro-tools-simple-form-ui",
+    "build:form:ui": "npm run-script build --workspace @fairys/taro-tools-simple-form-ui",
+    "--------": "============================form=============================",
     "watch:form": "npm run-script watch --workspace @fairys/taro-tools-simple-form",
     "build:form": "npm run-script build --workspace @fairys/taro-tools-simple-form",
     "-------": "============================docs=============================",
     "build:docs": "npm run-script build --workspace docs",
     "docs": "npm run-script dev --workspace docs",
-    "build:all": "npm run build:plugins && npm run build && npm run build:form",
+    "build:all": "npm run build:plugins && npm run build:form:ui && npm run build && npm run build:form",
     "version": "lerna version --force-publish=* --no-changelog --no-git-tag-version --no-push",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\""
   },
