--- a/examples/base/package.json
+++ b/examples/base/package.json
@@ -41,7 +41,7 @@
     "@fairys/taro-tools-react": "^0.0.7",
     "@fairys/taro-tools-simple-form": "^0.0.7",
     "@fairys/taro-tools-simple-form-ui": "^0.0.7",
-    "@nutui/nutui-react-taro": "^3.0.18",
+    "@nutui/nutui-react-taro": "^3.0.19-cpp.24",
     "@tarojs/components": "4.1.7",
     "@tarojs/helper": "4.1.7",
     "@tarojs/plugin-framework-react": "4.1.7",
