--- a/packages/simple-form-ui/package.json
+++ b/packages/simple-form-ui/package.json
@@ -25,7 +25,7 @@
     "esm"
   ],
   "dependencies": {
-    "@fairys/valtio-form": "^0.0.8",
+    "@fairys/valtio-form-basic": "^0.0.8",
     "@nutui/nutui-react-taro": "^3.0.18",
     "async-validator": "~4.2.5",
     "clsx": "2.1.1",
